[package]
name = "ngrok-java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
jaffi = "0.2.0"

[dependencies]
jaffi_support = "0.2.0"
once_cell = "1.17.1"
futures = "0.3.25"
bytes = "1.4.0"
ngrok = { version = "0.11.3" }
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.59"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[lib]
crate_type = ["cdylib"]
